<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
...
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="40dp"
                app:title="">

                <ImageView
                    android:id="@+id/back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_marginStart="16dp"
                    android:tint="@color/white"
                    app:srcCompat="@drawable/ic_arrow_back_black_24dp" />

                <CheckBox
                    android:id="@+id/starred"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="16dp"
                    android:button="@drawable/star_check"
                    android:buttonTint="@color/white" />
...

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:elevation="4dp"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|end|right" />
...
        android:clipToPadding="true"
        android:fitsSystemWindows="true"
        android:background="@color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/date_label"
                style="@style/KaoriUpTextView"
...
                android:text="&quot;Penso che sia davvero utile affrontare questi esercizi in vista dell'esame.&quot;"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/note_label" />

            <include
                android:id="@+id/doc_file"
                layout="@layout/material_file_layout"
                android:visibility="gone" />

            <include
                android:id="@+id/libro_file"
                layout="@layout/material_libro_layout"
...
